// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-votes"
>
  <span
    className="inner-btn"
    onClick={[Function]}
    title="10 Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    10
  </span>
</div>
`;

exports[`(2) No votes 1`] = `
<div
  className="entry-votes"
>
  <span
    className="inner-btn no-data"
    title="No Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    0
  </span>
</div>
`;

exports[`(3) Render of detail with votes 1`] = `
<div
  className="votes-dialog-content"
>
  <div
    className="table-responsive"
  >
    <div
      className="react-bootstrap-table"
    >
      <table
        className="table"
      >
        <thead>
          <tr>
            <th
              tabIndex={0}
            >
              Voter
            </th>
            <th
              aria-label="Reward sort desc"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Reward
              <span
                className="table-sort-caret active"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
            <th
              aria-label="Percent sortable"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Percent
              <span
                className="table-sort-caret"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
                 
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
            <th
              aria-label="Time sortable"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Time
              <span
                className="table-sort-caret"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
                 
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user1"
                onClick={[Function]}
              >
                 
                <span
                  className="user-avatar small"
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
                    }
                  }
                />
                 
                user1
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 125.037
            </td>
            <td
              className="percent-cell"
            >
              0.4 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="2020-01-01 23:12:00"
              >
                3 days ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user2"
                onClick={[Function]}
              >
                 
                <span
                  className="user-avatar small"
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
                    }
                  }
                />
                 
                user2
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 0.058
            </td>
            <td
              className="percent-cell"
            >
              100.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="2020-01-01 23:12:00"
              >
                3 days ago
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
